change file paths

--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
         <div class="katanas-pic">
             <picture>
                 <source
-                srcset="/assets/katanas.png"
+                srcset="./assets/katanas.png"
                 media="(min-width: 900px)" />
-                <img src="/assets/small katanas.png" alt="" />
+                <img src="./assets/small katanas.png" alt="" />
             </picture>
         </div>
         <div class="title">
@@ -31,9 +31,9 @@
         <div class="heroes-pic">
             <picture>
                 <source
-                srcset="/assets/heroes.png"
+                srcset="./assets/heroes.png"
                 media="(min-width: 900px)" />
-                <img src="/assets/small heros.png" alt="" />
+                <img src="./assets/small heros.png" alt="" />
             </picture>
         </div>
         <div class="edition">
@@ -44,9 +44,9 @@
         <div class="characters-pic">
             <picture>
                 <source
-                srcset="/assets/characters.png"
+                srcset="./assets/characters.png"
                 media="(min-width: 900px)" />
-                <img src="/assets/small characters.png" alt="" />
+                <img src="./assets/small characters.png" alt="" />
             </picture>
         </div>
         <h1 class="twenty">21 CHARACTERS</h1>
@@ -56,9 +56,9 @@
         <div class="horse-pic">
             <picture>
                 <source
-                srcset="/assets/horse.png"
+                srcset="./assets/horse.png"
                 media="(min-width: 900px)" />
-                <img src="/assets/small horse.png" alt="" />
+                <img src="./assets/small horse.png" alt="" />
             </picture>
         </div>
         <div class="the-goal">
@@ -69,9 +69,9 @@
         <div class="mask-pic">
             <picture>
                 <source
-                srcset="/assets/mask.png"
+                srcset="./assets/mask.png"
                 media="(min-width: 900px)" />
-                <img src="/assets/small mask.png" alt="" />
+                <img src="./assets/small mask.png" alt="" />
             </picture>
         </div>
         <div class="coupon">
